Fix alignment issue in cards.css

--- a/four-card-component/cards.css
+++ b/four-card-component/cards.css
@@ -110,16 +110,14 @@ img{
     display: flex;
     flex-direction: column;
   }
-  .left, .right, .top, .bottom{
-    /* display: grid; */
-    /* flex-direction: column; */
-    /*width: 85vw*/
-    /* height: 200px; */
+  .right, .left, .top, .bottom{
+    margin: 10px auto;
   }
   main{
     width: 80%;
     display: flex;
     flex-direction: column;
   }
- /*.center{ margin: 0 15px;}*/
+  .center, .light, .dark{
+    margin: 3px auto;
   }
